--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -3,7 +3,7 @@ name: Mark stale issues and pull requests
 on:
   workflow_dispatch:
   schedule:
-    - cron: 40 9 * * *
+    # - cron: 40 9 * * *
 permissions:
   pull-requests: write
   issues: write
